# playground

./: .gitignore  README.md
example-of-halo2/: Cargo.toml  (+1 more)
verifiable-runtime/: Cargo.toml
verifiable-runtime/src/: lib.rs  main.rs
verifiable-runtime/src/dvm/: mod.rs
verifiable-runtime/src/helper/: mod.rs
verifiable-runtime/src/proofs/: mod.rs
verifiable-runtime/src/proofs/deterministic_computations/: mod.rs  next_state_computation.rs
verifiable-runtime/src/proofs/high_level_plain_proof/: high_level_plain_proof.rs  mod.rs
verifiable-runtime/src/proofs/proof_types/: mod.rs  p_opcode.rs  p_opcode_params.rs  p_program_counter.rs  p_program_memory_location.rs  p_read_write_acces.rs  p_stack_depth.rs  p_time_tag.rs
verifiable-runtime/src/rescue/: air.rs  mod.rs  prover.rs  rescue.rs
verifiable-runtime/src/runtime/: constants.rs  dvm.rs  error_code.rs  execution.rs  mod.rs  opcode.rs  opcode_with_params.rs  program_memory.rs  raw_execution_trace.rs  stack.rs  stack_access.rs  stack_requirement.rs
verifiable-runtime/src/runtime/access_operation_util/: access_operation.rs  mod.rs
verifiable-runtime/src/runtime/access_util/: access_specficiation_extractor.rs  access_specification.rs  access_type.rs  mod.rs
verifiable-runtime/src/runtime/error_code_util/: error_code.rs
verifiable-runtime/src/snark/: constraints.rs
verifiable-runtime/src/stark/: air.rs  mod.rs  prover.rs
verifiable-runtime/src/test/: mod.rs  test.rs  test_opcode_definition.rs
verifiable-runtime/src/utils/: copy_slice.rs  mod.rs  rescue.rs
verifiable-runtime/src/vrt/: opcode.rs
(+84 files in other folders)
