[package]
name = "verifiable-runtime"
version = "0.1.0"
edition = "2021"

[lib]
bench = false
doc = false

[[bin]]
name = "verifiable-runtime"
path = "src/main.rs"
bench = false
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = "0.4.0"
log = "0.4.17"