[package]
name = "verifiable-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "vrt"
path = "src/lib.rs"

[[bin]]
name = "verifiable-dvm"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winterfell = "0.4.0"
log = "0.4.17"
blake3 = "1.3.1"