[package]
name = "verifiable-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "vrt"
path = "src/lib.rs"

[[bin]]
name = "verifiable-dvm"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
blake3 = "1.3.1"
ark-groth16 = "0.3.0"
ark-std = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-ff = "0.3.0"
ark-relations = "0.3.0"
ark-r1cs-std = "0.3.1"
arkworks-r1cs-gadgets = "1.0.0"
ark-bw6-761 = "0.3.0"
ark-nonnative-field = "0.3.0"
ark-sponge = "0.3.0"
ark-bls12-381 = "0.3.0"